Improve SLAP and DRY